force-app/main/default/objects/Card_Distributor__c/Card_Distributor__c.object-meta.xml
<CustomObject>
    <label>כרטיס מפיץ</label>
    <nameField>
        <label>שם משפחה</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>כרטיס מפיץ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>