force-app/main/default/objects/Card_Distributor__c/fields/branch__c.field-meta.xml
<CustomField>
    <fullName>branch__c</fullName>
    <label>סניף</label>
    <length>255</length>
    <type>Text</type>
</CustomField>