force-app/main/default/objects/Card_Distributor__c/fields/commission__c.field-meta.xml
<CustomField>
    <fullName>commission__c</fullName>
    <label>עמלה</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>