force-app/main/default/objects/Card_Distributor__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>חברה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>