force-app/main/default/objects/Card_Distributor__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>מייל</label>
    <type>Email</type>
</CustomField>