force-app/main/default/objects/Card_Distributor__c/fields/Floor_Commission__c.field-meta.xml
<CustomField>
    <fullName>Floor_Commission__c</fullName>
    <label>ריצפת עמלה</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>