force-app/main/default/objects/Card_Distributor__c/fields/InternetSIte__c.field-meta.xml
<CustomField>
    <fullName>InternetSIte__c</fullName>
    <label>אתר אינטרנט</label>
    <type>Url</type>
</CustomField>