force-app/main/default/objects/Card_Distributor__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>הערות</label>
    <length>255</length>
    <type>Text</type>
</CustomField>