force-app/main/default/objects/Card_Distributor__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>טלפון נייד</label>
    <type>Phone</type>
</CustomField>