force-app/main/default/objects/Card_Distributor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>First_Name__c</columns>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>iw</language>
</ListView>